@@ -200,6 +200,7 @@ OP_BINDIR=`eval echo "$my_op_bindir/"`
 AC_DEFINE_UNQUOTED(OP_BINDIR, "$OP_BINDIR", [package binary directory])
 OP_DOCDIR=`eval echo "${my_op_prefix}/share/doc/$PACKAGE/"`
 AC_SUBST(OP_DOCDIR)
+AX_CELL_SPU
 
 AC_OUTPUT(Makefile \
 	m4/Makefile \
